--- a/css/style.css
+++ b/css/style.css
@@ -245,10 +245,10 @@ body {
   .row--small {
     max-width: 70%;
     margin: 0 auto; }
-    @media only screen and (max-width: 860px) {
+    @media only screen and (max-width: 880px) {
       .row--small {
         max-width: 90%; } }
-    @media only screen and (max-width: 860px) {
+    @media only screen and (max-width: 880px) {
       .row--small {
         max-width: 90%; } }
   .row:not(:last-child) {
@@ -458,9 +458,6 @@ body {
       text-decoration: none;
       margin: 0;
       padding: 0; }
-      @media only screen and (max-width: 600px) {
-        .nav__ul__item {
-          display: none; } }
       .nav__ul__item a {
         font-size: 1.7rem;
         line-height: 5.5rem;
@@ -523,7 +520,8 @@ body {
     background: linear-gradient(to left, #252934, #101216);
     height: 100vh;
     transform: translateX(110%);
-    padding: 20vh 0; }
+    padding: 27vh 0;
+    opacity: 0; }
     .nav__ul {
       height: 100vh;
       width: 100vw; }
@@ -539,6 +537,7 @@ body {
 
 .overlay {
   background: linear-gradient(to left, #252934, #101216);
+  opacity: 1;
   height: 100vh;
   transform: translateX(0) !important;
   padding: 27vh 0; }
@@ -589,10 +588,24 @@ body {
     padding: 1.1rem 2.8rem !important;
     font-size: 2.2rem !important;
     font-weight: 500 !important;
+    border: 2px solid #ff0000;
+    color: #ff0000;
+    background: transparent; }
+    .btn--transparent--3:hover, .btn--transparent:visited:hover {
+      background: #ff0000;
+      border: 2px solid #ff0000;
+      color: white; }
+  .btn--transparent--4, .btn--transparent:visited {
+    padding: 1.1rem 2.8rem !important;
+    font-size: 2.2rem !important;
+    font-weight: 500 !important;
     background: #ff0000;
     border: 2px solid #ff0000;
     color: white; }
-    .btn--transparent--3:hover, .btn--transparent:visited:hover {
+    .btn--transparent--4:hover, .btn--transparent:visited:hover {
+      background: #ff0000;
+      border: 2px solid #ff0000;
+      color: white;
       border: 2px solid #ff0000;
       color: #ff0000;
       background: transparent; }
@@ -640,7 +653,7 @@ body {
   padding: 0 0 .9rem 1.6rem;
   line-height: 4rem;
   color: white; }
-  @media only screen and (max-width: 790px) {
+  @media only screen and (max-width: 811px) {
     .skewed {
       max-width: 100%; } }
   .skewed::after {
@@ -653,7 +666,7 @@ body {
     right: -1.4rem;
     top: 0;
     transform: skewX(-30deg); }
-    @media only screen and (max-width: 790px) {
+    @media only screen and (max-width: 811px) {
       .skewed::after {
         display: none; } }
 
@@ -706,6 +719,9 @@ body {
       background: #4FD5D6;
       position: absolute;
       bottom: 50%; }
+      @media only screen and (max-width: 950px) {
+        .graph__circle::before {
+          height: .2rem; } }
     .graph__circle-1::before {
       width: 32.4rem;
       right: -11rem; }
@@ -808,12 +824,19 @@ body {
           .graph__circle__text-box__paragraph--left p {
             color: #4FD5D6; }
 
-@media only screen and (max-width: 870px) {
+@media only screen and (max-width: 878px) {
   .graph {
     margin-top: 24rem !important;
     margin-bottom: 12rem !important;
     width: 60%;
     margin: 19rem 5rem 6rem 0; }
+    .graph__circle-1::before {
+      width: 25.14rem;
+      right: -11rem; }
+    .graph__circle-1 .graph__circle__text-box {
+      right: -46rem; }
+      .graph__circle-1 .graph__circle__text-box--left {
+        right: 8.55rem; }
     .graph__circle__text-box--left {
       top: -7rem;
       padding: 0 1.6rem .9rem 0;
@@ -1216,7 +1239,7 @@ body {
   color: white; }
 
 input[type=text], select, textarea {
-  background: rgba(16, 21, 28, 0.7);
+  background: rgba(8, 11, 15, 0.4);
   float: right;
   font-family: inherit;
   color: white;
@@ -1237,7 +1260,9 @@ input[type=text], select, textarea {
 
 input:focus, textarea:focus {
   outline: none !important;
-  box-shadow: 0 0 10px #719ECE; }
+  box-shadow: 0 0 10px #719ECE;
+  background: rgba(51, 51, 51, 0.8);
+  background: rgba(8, 11, 15, 0.6); }
 
 textarea {
   margin-top: .6rem;
@@ -1316,7 +1341,7 @@ textarea {
     .section-about .float--photo {
       background: transparent;
       width: 30%; }
-      @media only screen and (max-width: 754px) {
+      @media only screen and (max-width: 811px) {
         .section-about .float--photo {
           width: 100%;
           background: whitesmoke;
@@ -1337,11 +1362,11 @@ textarea {
           filter: none;
           transform: scale(1.05);
           box-shadow: 0px 0px 13px 8px rgba(0, 0, 0, 0.48); }
-        @media only screen and (max-width: 1120px) {
+        @media only screen and (max-width: 1300px) {
           .section-about .float--photo .my-photo {
             width: 50%;
             float: right; } }
-        @media only screen and (max-width: 754px) {
+        @media only screen and (max-width: 811px) {
           .section-about .float--photo .my-photo {
             width: 65%;
             float: none;
@@ -1358,22 +1383,22 @@ textarea {
       padding: 10rem 0 7rem 0;
       background: whitesmoke;
       width: 70%; }
-      @media only screen and (max-width: 1120px) {
+      @media only screen and (max-width: 1300px) {
         .section-about .float--about {
           padding: 25rem 0 11rem 0; } }
       @media only screen and (max-width: 900px) {
         .section-about .float--about {
           padding: 20rem 0 11rem 0; } }
-      @media only screen and (max-width: 754px) {
+      @media only screen and (max-width: 811px) {
         .section-about .float--about {
           padding: 10rem 0 2rem 0; } }
-      @media only screen and (max-width: 754px) {
+      @media only screen and (max-width: 811px) {
         .section-about .float--about .heading-secondary--biger {
           text-align: center; } }
-      @media only screen and (max-width: 1120px) {
+      @media only screen and (max-width: 1300px) {
         .section-about .float--about .heading-secondary--biger {
           margin-left: 8rem; } }
-      @media only screen and (max-width: 754px) {
+      @media only screen and (max-width: 811px) {
         .section-about .float--about .heading-secondary--biger {
           margin-left: 0; } }
       @media only screen and (max-width: 1480px) {
@@ -1384,14 +1409,14 @@ textarea {
         .section-about .float--about .heading-secondary--biger::before {
           width: 7rem;
           left: -8.5rem; } }
-      @media only screen and (max-width: 754px) {
+      @media only screen and (max-width: 811px) {
         .section-about .float--about .heading-secondary--biger::before {
           position: relative;
           bottom: -9rem;
           left: 0;
           margin-left: 0 auto;
           width: 10rem; } }
-    @media only screen and (max-width: 1120px) {
+    @media only screen and (max-width: 1300px) {
       .section-about .float {
         float: none;
         width: 100%; } }
@@ -1400,15 +1425,21 @@ textarea {
       text-align: center !important; } }
   .section-about__text-box {
     padding: 1.7rem 1rem 0 1.6rem; }
-    @media only screen and (max-width: 830px) {
+    @media only screen and (max-width: 1510px) {
       .section-about__text-box .dots {
         display: none; } }
-    @media only screen and (max-width: 754px) {
+    @media only screen and (max-width: 1300px) {
+      .section-about__text-box .dots {
+        display: inline; } }
+    @media only screen and (max-width: 1090px) {
+      .section-about__text-box .dots {
+        display: none; } }
+    @media only screen and (max-width: 811px) {
       .section-about__text-box .dots {
         display: inline; } }
   .section-about .col-1-of-2 {
     padding: 0 3rem 0rem 0; }
-    @media only screen and (max-width: 754px) {
+    @media only screen and (max-width: 811px) {
       .section-about .col-1-of-2 {
         float: none;
         width: 70%;
@@ -1423,7 +1454,7 @@ textarea {
         width: 100%; } }
     .section-about .col-1-of-2:first-of-type {
       border-right: 1px solid #252934; }
-      @media only screen and (max-width: 754px) {
+      @media only screen and (max-width: 811px) {
         .section-about .col-1-of-2:first-of-type {
           margin-bottom: 10rem !important;
           border-right: none; } }
@@ -1446,7 +1477,7 @@ textarea {
   @media only screen and (max-width: 900px) {
     .section-graphs .col-1-of-5 {
       transform: scale(0.9); } }
-  @media only screen and (max-width: 770px) {
+  @media only screen and (max-width: 880px) {
     .section-graphs .col-1-of-5 {
       display: inline-block;
       float: none;
@@ -1461,7 +1492,7 @@ textarea {
   @media only screen and (max-width: 527px) {
     .section-graphs .col-1-of-5--midle {
       display: none; } }
-  @media only screen and (max-width: 770px) {
+  @media only screen and (max-width: 880px) {
     .section-graphs .col-1-of-5:nth-of-type(-n+2) {
       margin-bottom: 5rem;
       margin-top: 3rem; } }
