--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -46,11 +46,34 @@
             padding: 1.1rem 2.8rem !important;
             font-size: 2.2rem !important;
             font-weight: 500 !important;
+            border: 2px solid $color-secondary;
+            color: $color-secondary;
+            background: transparent;
+            
+            &:hover{
+                
+                background: $color-secondary;
+                border: 2px solid $color-secondary;
+                color: $color-white;
+                
+            }
+        }
+        
+        &--4,&:visited{
+            padding: 1.1rem 2.8rem !important;
+            font-size: 2.2rem !important;
+            font-weight: 500 !important;
             background: $color-secondary;
             border: 2px solid $color-secondary;
             color: $color-white;
+
+           
             
             &:hover{
+                
+                background: $color-secondary;
+                border: 2px solid $color-secondary;
+                color: $color-white;
                 border: 2px solid $color-secondary;
                 color: $color-secondary;
                 background: transparent;
