--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,7 +10,7 @@
             background: transparent;
             width: 30%;
             
-            @media only screen and(max-width:754px){ 
+            @media only screen and(max-width:811px){ 
                 width: 100%;
                 background: $color-grey-light-2;
                 padding-top: 15rem;
@@ -40,12 +40,12 @@
                     box-shadow: 0px 0px 13px 8px rgba(0,0,0,0.48);
                 }
                 
-                @media only screen and(max-width:1120px){ 
+                @media only screen and(max-width:1300px){ 
                     width:50%;
                     float: right;
                 }
                 
-                @media only screen and(max-width:754px){ 
+                @media only screen and(max-width:811px){ 
                     width: 65%;
                     float: none;
                     display: block;
@@ -73,7 +73,7 @@
             background: $color-grey-light-2;
             width: 70%;
             
-            @media only screen and(max-width:1120px){ 
+            @media only screen and(max-width:1300px){ 
                 padding: 25rem 0 11rem 0;
             }
             
@@ -81,7 +81,7 @@
                 padding: 20rem 0 11rem 0;
             }
             
-            @media only screen and(max-width:754px){ 
+            @media only screen and(max-width:811px){ 
                 padding: 10rem 0 2rem 0;
                 
             }
@@ -92,17 +92,17 @@
             }
             
             & .heading-secondary--biger{
-                @media only screen and(max-width:754px){ 
+                @media only screen and(max-width:811px){ 
                     text-align: center;
                     
                 }
-                @media only screen and(max-width:1120px){ 
+                @media only screen and(max-width:1300px){ 
                     margin-left: 8rem;
                     
 
                 }
                 
-                @media only screen and(max-width:754px){ 
+                @media only screen and(max-width:811px){ 
                     margin-left: 0;
 
                 }
@@ -118,7 +118,7 @@
                         
                     }
                     
-                    @media only screen and(max-width:754px){ 
+                    @media only screen and(max-width:811px){ 
                         position: relative;
                         bottom: -9rem;
                         left: 0;
@@ -131,7 +131,7 @@
             }
         }
         
-        @media only screen and(max-width:1120px){ 
+        @media only screen and(max-width:1300px){ 
             float: none;
             width: 100%;
        
@@ -145,17 +145,26 @@
     }
     
    
-
-    
-   
     &__text-box{
         padding: 1.7rem 1rem 0 1.6rem;
         
         & .dots{
-            @media only screen and(max-width:830px){ 
+        
+            @media only screen and(max-width:1510px){ 
                 display: none;
+                
             }
-            @media only screen and(max-width:754px){ 
+            
+            @media only screen and(max-width:1300px){ 
+                display: inline;
+            }
+            
+            @media only screen and(max-width:1090px){ 
+                display: none;
+                
+            }
+            
+            @media only screen and(max-width:811px){ 
                 display: inline;
             }
             
@@ -166,7 +175,7 @@
         padding: 0 3rem 0rem 0;
         
         
-        @media only screen and(max-width:754px){ 
+        @media only screen and(max-width:811px){ 
             float: none;
             width: 70%;
             padding: 0;
@@ -188,7 +197,7 @@
         &:first-of-type{
             border-right: 1px solid $color-grey-dark;
             
-            @media only screen and(max-width:754px){ 
+            @media only screen and(max-width:811px){ 
                 margin-bottom: 10rem !important;
                 border-right: none;
                     
@@ -213,6 +222,7 @@
 }
 
 
+
 .section-graphs{
     position: relative;
     padding: 15rem 0 12rem 0;
@@ -225,7 +235,7 @@
     
     & .col-1-of-5{
         @media only screen and(max-width:900px){ transform: scale(.9)}
-        @media only screen and(max-width:770px){ 
+        @media only screen and(max-width:880px){ 
            
             display: inline-block;
             float: none;
@@ -245,9 +255,9 @@
             display: none;
            }
         }
-        
+            
         &:nth-of-type(-n+2){
-            @media only screen and(max-width:770px){
+            @media only screen and(max-width:880px){
                 margin-bottom: 5rem;
                 margin-top: 3rem;
            }
